# fibers_rpc

./: .travis.yml  Cargo.toml  README.md
doc/: wire_format.md
examples/: echo.rs
src/: channel.rs  client.rs  client_service.rs  client_side_channel.rs  client_side_handlers.rs  codec.rs  codec_bincode.rs  codec_json.rs  codec_msgpack.rs  error.rs  frame.rs  frame_stream.rs  lib.rs  message.rs  message_stream.rs  metrics.rs  packet.rs  rpc_client.rs  rpc_server.rs  server.rs  server_side_channel.rs  server_side_handlers.rs  traits.rs
src/client/: mod.rs  service.rs
src/server/: mod.rs
