[package]
name = "fibers_rpc"
version = "0.1.10"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "RPC library built on top of fibers crate"
homepage = "https://github.com/sile/fibers_rpc"
repository = "https://github.com/sile/fibers_rpc"
readme = "README.md"
keywords = ["rpc", "fibers"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/fibers_rpc"}
codecov = {repository = "sile/fibers_rpc"}

[dependencies]
atomic_immut = "0.1"
bincode = { version = "1", optional = true }
byteorder = "1"
fibers = "0.1"
futures = "0.1"
prometrics = "0.1"
rmp-serde = { version = "0.13", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
slog = "2"
trackable = "0.2"

[dev-dependencies]
clap = "2"
sloggers = "0.2"

[features]
bincode_codec = ["serde", "bincode"]
json_codec = ["serde", "serde_json"]
msgpack_codec = ["serde", "rmp-serde"]

[package.metadata.docs.rs]
all-features = true