[package]
name = "fibers_rpc"
version = "0.2.13"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "RPC library built on top of fibers crate"
homepage = "https://github.com/sile/fibers_rpc"
repository = "https://github.com/sile/fibers_rpc"
readme = "README.md"
keywords = ["rpc", "fibers"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/fibers_rpc"}
codecov = {repository = "sile/fibers_rpc"}

[dependencies]
atomic_immut = "0.1"
bytecodec = "0.4"
byteorder = "1"
factory = "0.1"
fibers = "0.1"
fibers_tasque = "0.1"
futures = "0.1"
prometrics = "0.1"
slog = "2"
trackable = "0.2"

[dev-dependencies]
clap = "2"
sloggers = "0.2"
